<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arena.biel.arenacamp.activity.TelaLoginActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center">
  <ImageView
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/fundo"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:textSize="20sp"
      android:textColor="#000"
      android:text="@string/usuarioLogin"/>
   <com.beardedhen.androidbootstrap.BootstrapEditText
       android:id="@+id/userEmail"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_marginTop="3dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:textColor="#000"
       app:bootstrapBrand="info"
       android:hint="@string/usuarioLogin_hint"
       app:bootstrapSize="md"
       app:roundedCorners="true" />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="3dp"
       android:textSize="20sp"
       android:textColor="#000"
       android:text="@string/usuarioSenhaLogin"/>
   <com.beardedhen.androidbootstrap.BootstrapEditText
       android:id="@+id/userSenha"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_marginTop="3dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:textColor="#000"
       app:bootstrapBrand="info"
       android:inputType="textPassword"
       android:hint="@string/usuarioSenha_hint"
       app:bootstrapSize="md"
       app:roundedCorners="true" />

   <com.beardedhen.androidbootstrap.BootstrapButton
       android:id="@+id/btnEntrar"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:text="@string/entrar"
       android:textColor="@android:color/background_dark"
       android:textSize="20dp"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       app:bootstrapBrand="success"
       app:bootstrapSize="md"
       app:buttonMode="regular"
       app:roundedCorners="true"
       app:showOutline="false"/>

   <TextView
       android:id="@+id/tvCrieAqui"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="35dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="10dp"
       android:textSize="17sp"
       android:textColor="#000"
       android:text="Novo no Futebola? Crie uma conta?"/>
 </LinearLayout>


</ScrollView>
